
syntax = "proto3";

package coffee;

service CoffeeService {
  rpc coffee (CoffeeRequest) returns (CoffeeReply) {
  }
}

message CoffeeRequest {
  int32 id = 1;
}

message CoffeeReply {
  Coffee Coffee = 1;
}

message Coffee {
  uint32 ID = 1;
  string Name = 2;
  string CurrState = 3;
  Beans Beans = 4;
  repeated Transition History = 5;
  int64 CreatedAt = 6;
}

message Beans {
  uint32 ID = 1;
  string name = 2;
  string desc = 3;
}

message Transition {
  uint32 ID = 1;
  string From = 2;
  string To = 3;
  int64 Time = 4;
  User User = 5;
}

message User {
  uint32 ID = 1;
  string Name = 2;
}
